building_spl_and_assessing_XIC_for_all_ions.ipynb updated to export the filtered file

--- a/notebooks/building_spl_and_assessing_XIC_for_all_ions.ipynb
+++ b/notebooks/building_spl_and_assessing_XIC_for_all_ions.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3bbb6057",
    "metadata": {},
    "outputs": [],
@@ -31,15 +31,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "cc28590c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/gabriel/anaconda3/envs/regfilter/lib/python3.9/site-packages/regFilter/filter.py:26: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  meta = feat_area.columns.str.replace('.mzXML Peak area', '').str.split('_').tolist()\n",
+      "/home/gabriel/anaconda3/envs/regfilter/lib/python3.9/site-packages/regFilter/filter.py:45: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  y = feat_area.index.str.replace('[^0-9]', '').str.replace('^$', '0').tolist()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of features: 1384\n",
+      "Number of features after filtering: 135\n"
+     ]
+    }
+   ],
    "source": [
-    "quant = 'user/.csv/data'\n",
+    "quant = '/user/data/file.csv'\n",
     "samp = Filter(quant)\n",
     "samp.formatFeatures()\n",
-    "samp.filterFeatures(npts=3)"
+    "samp.filterFeatures(npts=3, quant=quant)"
    ]
   },
   {
